Fixed overflow issues for focalboard

--- a/components/databases/focalboard/src/components/contentBlock.scss
+++ b/components/databases/focalboard/src/components/contentBlock.scss
@@ -32,8 +32,6 @@
     .ImageElement {
         pointer-events: none;
         width: 100%;
-        height: 100%;
-        object-fit: contain;
     }
 }
 
