--- a/components/databases/focalboard/src/components/gallery/galleryCard.scss
+++ b/components/databases/focalboard/src/components/gallery/galleryCard.scss
@@ -66,6 +66,8 @@
 
         .ImageElement {
             width: 100%;
+            height: 100%;
+            object-fit: contain;
         }
     }
 
